some words and captions

--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -1,13 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for Adrian Price-Whelan at 2018-03-07 18:15:33 -0500 
+%% Created for Adrian Price-Whelan at 2018-03-08 21:15:47 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Eggleton:1983,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/1983ApJ...268..368E},
+	Author = {{Eggleton}, P.~P.},
+	Date-Added = {2018-03-09 02:15:46 +0000},
+	Date-Modified = {2018-03-09 02:15:47 +0000},
+	Doi = {10.1086/160960},
+	Journal = {\apj},
+	Keywords = {Binary Stars, Celestial Mechanics, Orbital Elements, Roche Limit, Mass Ratios, Radii},
+	Month = may,
+	Pages = {368},
+	Title = {{Approximations to the radii of Roche lobes}},
+	Volume = 268,
+	Year = 1983,
+	Bdsk-Url-1 = {https://dx.doi.org/10.1086/160960}}
 
 @article{Pedregosa:2011,
 	Author = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
