--- a/paper/1-catalog/tables/unimodal-schema.tex
+++ b/paper/1-catalog/tables/unimodal-schema.tex
@@ -1,7 +1,8 @@
-\begin{table}[htb]
+\begin{table}[ht]
     \footnotesize
     \centering
     \begin{tabular}{l|l|l}
+        \multicolumn{3}{c}{\textbf{High-$K$, unimodal systems}} \\
         \hline
         Column name & Unit / format & Description \\
         \hline
