--- a/notebooks/figures/Results.ipynb
+++ b/notebooks/figures/Results.ipynb
@@ -165,7 +165,7 @@
     "bi_cat = clean_bi[bi_logg > 2]\n",
     "print(len(cat), len(bi_cat)//2)\n",
     "\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(11, 4.5))\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(11, 4.8))\n",
     "\n",
     "ax = axes[0]\n",
     "ax.errorbar(cat['M1'].value, cat['M2_min'].value,\n",
@@ -201,9 +201,9 @@
     "ax.set_xlabel('$M_1$ ' + '[{0:latex_inline}]'.format(u.Msun))\n",
     "\n",
     "ax.text(2.95, 3, r'$M_{2, {\\rm min}} = M_1$', \n",
-    "        ha='right', va='bottom', fontsize=13, color='#555555')\n",
+    "        ha='right', va='bottom', fontsize=15, color='#555555')\n",
     "ax.text(2.95, 0.07, r'$M_{2, {\\rm min}} = 0.08\\,{\\rm M}_\\odot$', \n",
-    "        ha='right', va='top', fontsize=13, color='#555555')\n",
+    "        ha='right', va='top', fontsize=15, color='#555555')\n",
     "\n",
     "# -- next panel\n",
     "\n",
@@ -244,7 +244,7 @@
     "ax.set_ylabel(r'$R_1 / (a\\,\\sin i)$')\n",
     "\n",
     "fig.tight_layout()\n",
-    "fig.subplots_adjust(wspace=0.65)\n",
+    "fig.subplots_adjust(wspace=0.45)\n",
     "fig.savefig(path.join(plot_path, 'mass.pdf'))"
    ]
   },
@@ -367,16 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.nanmedian(cat['M1']), np.nanmedian(cat['M2_min'])/np.sin(np.pi/4.)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat = clean_cat[clean_cat['LOGG'] > 2]\n",
+    "cat = clean_uni[clean_uni['LOGG'] > 2]\n",
     "\n",
     "fig, axes = plt.subplots(1, 2, figsize=(10.5, 5.), sharey=True)\n",
     "\n",
@@ -399,7 +390,7 @@
     "axes[0].set_xlabel(r'eccentricity, $e$')\n",
     "\n",
     "axes[0].set_xlim(-0.05, 1)\n",
-    "axes[0].set_ylim(0.4, 1000)\n",
+    "axes[0].set_ylim(0.4, 2000)\n",
     "axes[1].set_yscale('log')\n",
     "axes[0].xaxis.set_ticks(np.arange(0, 1+0.2, 0.2))\n",
     "\n",
@@ -429,7 +420,7 @@
     "fig.tight_layout()\n",
     "fig.subplots_adjust(right=0.85)\n",
     "\n",
-    "fig.savefig(path.join(plot_path, 'P-e-K.pdf'))"
+    "# fig.savefig(path.join(plot_path, 'P-e-K.pdf'))"
    ]
   },
   {
@@ -438,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = clean_cat[clean_cat['LOGG'] > 2]\n",
+    "cat = clean_uni[clean_uni['LOGG'] > 2]\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(6, 5))\n",
     "\n",
@@ -448,7 +439,7 @@
     "\n",
     "P_surface = period_at_surface(1.36*u.Msun, cat['LOGG'], \n",
     "                              cat['e'], 0.5*u.Msun)\n",
-    "cut = (cat['P']/P_surface) < 7\n",
+    "cut = (cat['P']/P_surface) < 8\n",
     "\n",
     "# ax.hist(cat['e'][cut], bins=bins, \n",
     "#         alpha=0.5, normed=True, rasterized=True,\n",
@@ -482,7 +473,7 @@
     "\n",
     "fig.tight_layout()\n",
     "\n",
-    "fig.savefig(path.join(plot_path, 'ecc-dist.pdf'), dpi=250)"
+    "# fig.savefig(path.join(plot_path, 'ecc-dist.pdf'), dpi=250)"
    ]
   },
   {
@@ -576,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
